(bug 20234) change how Vector's tabs behave on small resolutions
Instead of overlapping, the "right" one will be displayed below the "left"
one. It might overlap page's title, but this is better than rendering
critical functions unreachable.

This also cleans up the CSS slightly, positioning left and right nav using
the same constructs (margins instead of absolute positioning).

Also adjust jquery.collapsibleTabs.js to handle new styles. Vector
extension counterpart to this change is change Ie34dce9a9.

--- a/skins/vector/screen.css
+++ b/skins/vector/screen.css
@@ -102,9 +102,15 @@ div.emptyPortlet {
 }
 /* Navigation Containers */
 #left-navigation {
-	position: absolute;
-	left: 10em;
-	top: 2.5em;
+	float: left;
+	margin-left: 10em;
+	margin-top: 2.5em;
+	/* When right nav would overlap left nav, it's placed below it
+	   (normal CSS floats behavior). This rule ensures that no empty space
+	   is shown between them due to right nav's margin-top. Page layout
+	   is still broken, but at least the nav overlaps only the page title
+	   instead of half the content. */
+	margin-bottom: -2.5em;
 }
 #right-navigation {
 	float: right;
